# usql

./: Cargo.toml
examples/: usql.rs
src/: any_connector.rs  config.rs  error.rs  lib.rs
src/libsql_impl/: conn.rs  pool.rs  row.rs  transaction.rs  value.rs
src/postgres_impl/: conn.rs  mod.rs  trans.rs  value.rs
src/sqlite_impl/: conn.rs  statement.rs  transaction.rs  util.rs
src/value/: mod.rs  owned.rs
usql/: Cargo.toml
usql-any/: Cargo.toml
usql-any/src/: config.rs  connector.rs  lib.rs
usql-builder/: Cargo.toml
usql-builder/examples/: builder.rs  virtual.rs
usql-builder/src/: context.rs  either.rs  error.rs  lib.rs  sql.rs  statement.rs
usql-builder/src/expr/: between.rs  binary.rs  call.rs  case.rs  ext.rs  ident.rs  mod.rs  value.rs
usql-builder/src/mutate/: delete.rs  insert.rs  insert_many.rs  mod.rs  set.rs  update.rs
usql-builder/src/schema/: alter.rs  column.rs  constraint.rs  create.rs  fk.rs  index.rs  mod.rs  table.rs  ty.rs  virtual.rs
usql-builder/src/select/: alias.rs  apply.rs  filter.rs  group.rs  having.rs  join.rs  limit.rs  mod.rs  query.rs  select.rs  selection.rs  sort.rs  target.rs
usql-cli/: Cargo.toml
usql-cli/src/: cli.rs  exec.rs  fetch.rs  main.rs
usql-core/: Cargo.toml
usql-core/examples/: usql.rs
usql-core/src/: any_connector.rs  config.rs  lib.rs  traits.rs  util.rs
usql-core/src/libsql_impl/: mod.rs  pool.rs
usql-core/src/postgres_impl/: connector.rs  row.rs  trans.rs
usql-core/src/sqlite_impl/: conn.rs  mod.rs  pool.rs  row.rs  statement.rs  traits.rs  transaction.rs
usql-core/src/value/: owned.rs
usql-libsql/: Cargo.toml
usql-libsql/src/: conn.rs  connector.rs  error.rs  lib.rs  pool.rs  row.rs  stmt.rs  transaction.rs  value.rs
usql-macros/: Cargo.toml
usql-macros/src/: lib.rs
usql-migrate/: Cargo.toml
usql-migrate/examples/: migrate.rs
usql-migrate/examples/migrations/initial/: up.sql
usql-migrate/examples/migrations/next/: up.sql
usql-migrate/src/: data.rs  error.rs  exec.rs  lib.rs  loader.rs  migration.rs  migrator.rs  sql.rs
usql-postgres/: Cargo.toml
usql-postgres/src/: conn.rs  connector.rs  error.rs  lib.rs  options.rs  pool.rs  row.rs  stmt.rs  transaction.rs
usql-project/: Cargo.toml
usql-project/src/: error.rs  lib.rs  project.rs  result.rs  row.rs  stream.rs  writer.rs
usql-quick/: Cargo.toml  usql.d.ts
usql-quick/examples/: quick.rs  test.js
usql-quick/src/: conn.rs  lib.rs  module.rs  pool.rs  row.rs  statement.rs  trans.rs  value.rs
usql-sqlite/: Cargo.toml
usql-sqlite/src/: conn.rs  connector.rs  error.rs  lib.rs  pool.rs  row.rs  statement.rs  traits.rs  transaction.rs  util.rs  worker.rs
usql-util/: Cargo.toml
usql-util/src/: lib.rs  project.rs  row.rs
usql-value/: Cargo.toml
usql-value/examples/: value.rs
usql-value/src/: atom.rs  cow.rs  geometry.rs  interner.rs  json.rs  lib.rs  libsql.rs  owned.rs  postgres.rs  ref.rs  ty.rs
usql-value/src/convert/: from_value.rs  mod.rs  try_from.rs
usql/examples/: project.rs  schema.sql  usql.rs
usql/src/: any_connector.rs  config.rs  conn.rs  error.rs  from_row.rs  lib.rs  pool.rs  query.rs  row.rs  stmt.rs  stream.rs  system.rs  target.rs  traits.rs  trans.rs  typed.rs
usql/src/libsql_impl/: conn.rs  connector.rs  error.rs  pool.rs  row.rs  transaction.rs
usql/src/postgres_impl/: conn.rs  mod.rs  pool.rs  row.rs
usql/src/sqlite_impl/: conn.rs  connector.rs  error.rs  pool.rs  query_result.rs  row.rs  transaction.rs  util.rs
usql/src/value/: cow.rs  json.rs  ref.rs
