[workspace]

resolver = "2"

members = [
  "usql-core",
  "usql-builder",
  "usql-migrate",
  "usql-quick",
  "usql",
  "usql-macros",
  "usql-sqlite",
  "usql-libsql",
  "usql-postgres",
  "usql-any",
  "usql-value", "usql-util",
]


[workspace.dependencies]
futures-core = { version = "0.3", default-features = false, features = [
  "alloc",
] }
pin-project-lite = { version = "0.2" }
deadpool = { version = "0.12" }
async-lock = { version = "3" }
uuid = { version = "1", default-features = false, features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
async-stream = { version = "0.3" }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
