[package]
name = "usql-builder"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["sqlformat"]


[dependencies]
usql-core = { path = "../usql-core" }
usql-value = { path = "../usql-value" }

sqlformat = { version = "0.3", optional = true }
dyn-clone = { version = "1" }

[dev-dependencies]
sqlformat = { version = "*" }
