[package]
name = "usql-core"
version = "0.1.0"
edition = "2024"


[features]

[dependencies]
usql-value = { path = "../usql-value" }
futures-core = { version = "0.3", default-features = false, features = [
    "alloc",
] }
pin-project-lite = { version = "0.2" }


[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }


[[example]]
path = "./examples/usql.rs"
name = "usql"
required-features = ["sqlite"]
