[package]
name = "usql-migrate"
version = "0.1.0"
edition = "2024"

[features]
default = ["sql"]
sql = ["tokio"]

[dependencies]
usql = { path = "../usql" }
futures-core = { version = "0.3" }
chrono = { version = "0.4", features = ["now"] }

tokio = { version = "1", features = ["fs"], optional = true }


[dev-dependencies]
futures-executor = "0.3"
usql-sqlite = { path = "../usql-sqlite" }
