[package]
name = "usql-migrate"
version = "0.1.0"
edition = "2024"

[features]
default = ["sql"]
sql = ["tokio"]

[dependencies]
usql-core = { path = "../usql-core" }
usql-value = { path = "../usql-value" }
usql-builder = { path = "../usql-builder" }
futures-core = { version = "0.3" }
chrono = { version = "0.4", features = ["now"] }

tokio = { version = "1", features = ["fs"], optional = true }
thiserror = { version = "2" }

[dev-dependencies]
futures-executor = "0.3"
usql-sqlite = { path = "../usql-sqlite" }
