[package]
name = "usql-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
usql-core = { path = "../usql-core" }
usql-value = { path = "../usql-value", features = ["postgres"] }

tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = { version = "0.14", features = [] }

async-stream = { version = "0.3" }
futures = { version = "0.3" }
