[package]
name = "usql-quick"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.8", features = ["full"] }
rquickjs-util = { git = "https://github.com/fairy-render/klaver" }
rquickjs-modules = { git = " https://github.com/fairy-render/klaver" }
usql = { path = "../usql", features = ["std"] }
futures = { version = "0.3" }

[dev-dependencies]
klaver = { git = "https://github.com/fairy-render/klaver" }
tokio = { version = "1", features = ["rt", "macros"] }
usql = { path = "../usql", features = ["std", "sqlite"] }
