[package]
name = "usql-sqlite"
version = "0.1.0"
edition = "2024"

[features]
bundled = ["rusqlite/bundled-full"]
vector = ["bundled", "sqlite-vec"]

[dependencies]
usql-core = { path = "../usql-core" }
usql-value = { path = "../usql-value", features = ["serde"] }

rusqlite = { version = "0.37" }
flume = { version = "0.11" }
futures-channel = { version = "0.3", default-features = false, features = [
  "alloc",
] }
futures-core = { workspace = true }
pin-project-lite = { workspace = true }

deadpool = { workspace = true }
async-stream = { workspace = true }
async-lock = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

serde_json = { workspace = true }

sqlite-vec = { version = "0.1", optional = true }
