[package]
name = "usql-value"
version = "0.1.0"
edition = "2024"

[features]
postgres = ["postgres-types", "serde"]
libsql = ["dep:libsql", "serde", "serde_json"]
serde = [
  "dep:serde",
  "bytes/serde",
  "chrono/serde",
  "ordered-float/serde",
  "uuid/serde",
]
std = ["parking_lot"]

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
ordered-float = { version = "5", default-features = false, features = [] }
bytes = { version = "1", default-features = false }

postgres-types = { version = "0.2", features = [
  "with-uuid-1",
  "with-chrono-0_4",
  "with-serde_json-1",
], optional = true }
libsql = { version = "0.9", default-features = false, features = [
  "core",
], optional = true }

serde = { version = "1", default-features = false, features = [
  "derive",
  "rc",
], optional = true }
serde_json = { workspace = true, optional = true }

parking_lot = { version = "0.12", optional = true }
spin = { version = "0.10" }
