[package]
name = "usql-value"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "postgres"]
postgres = ["postgres-types", "serde", "geozero"]
libsql = ["dep:libsql", "serde", "serde_json"]
serde = [
  "dep:serde",
  "bytes/serde",
  "chrono/serde",
  "ordered-float/serde",
  "uuid/serde",
  "geo-types/serde",
]
std = ["parking_lot", "serde?/std", "geo-types/std", "wkt"]


[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
ordered-float = { version = "5", default-features = false, features = [] }
bytes = { version = "1", default-features = false }
geo-types = { version = "0.7", default-features = false }
wkt = { version = "0.14", optional = true }
geozero = { version = "0.14", features = [
  "with-postgis-postgres",
  "with-geo",
], optional = true }

postgres-types = { version = "0.2", features = [
  "with-uuid-1",
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-geo-types-0_7",
], optional = true }
libsql = { version = "0.9", default-features = false, features = [
  "core",
], optional = true }

serde = { version = "1", default-features = false, features = [
  "derive",
  "rc",
], optional = true }
serde_json = { workspace = true, optional = true }

parking_lot = { version = "0.12", optional = true }
spin = { version = "0.10" }

bycat-value = { workspace = true, optional = true }
