[package]
name = "usql"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive"]
derive = ["usql-macros"]

sqlite = ["usql-core/sqlite"]

[dependencies]
usql-core = { path = "../usql-core" }
usql-builder = { path = "../usql-builder" }
usql-macros = { path = "../usql-macros", optional = true }
futures-core = { version = "0.3" }
pin-project-lite = { version = "0.2" }
async-stream = { version = "0.3" }


[dev-dependencies]
futures = { version = "0.3" }

[[example]]
name = "usql"
path = "examples/usql.rs"
required-features = ["sqlite"]
